--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.3.1
+dj-static==0.0.6
 Django==3.1.4
 django-ckeditor==6.0.0
 django-extensions==3.1.1
@@ -8,4 +9,5 @@ Pillow==8.0.1
 psycopg2==2.8.6
 pytz==2020.4
 sqlparse==0.4.1
+static3==0.7.0
 whitenoise==5.2.0
